feat: added limit and removed redundant controller endpoints